k8s/base/nats.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app.kubernetes.io/name: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
      name: nats
