k8s/base/todo-item.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-item-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-item
  template:
    metadata:
      labels:
        app: todo-item
    spec:
      containers:
        - name: todo-item
          image: todo-item:latest
          imagePullPolicy: IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  name: todo-item-service
spec:
  selector:
    app: todo-item
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
