k8s/base/todo-list.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list
  template:
    metadata:
      labels:
        app: todo-list
    spec:
      containers:
        - name: todo-list
          image: todo-list:latest
          imagePullPolicy: IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  name: todo-list-service
spec:
  selector:
    app: todo-list
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
