k8s/base/web-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-client
  template:
    metadata:
      labels:
        app: web-client
    spec:
      containers:
        - name: web-client
          image: web-client:latest
          imagePullPolicy: IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  name: web-client-service
spec:
  selector:
    app: web-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
