k8s/base/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    konghq.com/strip-path: true
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-client-service
            port:
              number: 80
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /api/todo-item
        pathType: Prefix
        backend:
          service:
            name: todo-item-service
            port:
              number: 3000
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 3000
      - path: /api/todo-list
        pathType: Prefix
        backend:
          service:
            name: todo-list-service
            port:
              number: 3000
